tests/cases/structs/ok/union-by-selector-match-projection.ari
enum CipherType {
  stream,
  block,
}

struct SecurityParameters {
  cipher_type: CipherType,
}

struct StreamPayload {
  value: i64,
}

struct BlockPayload {
  value: i64,
}

struct TLSCiphertext {
  security: SecurityParameters,
  fragment: union by security.cipher_type {
    stream => StreamPayload,
    block => BlockPayload,
  },
}

fn score(packet: TLSCiphertext) -> i64 {
  return match packet.security.cipher_type {
    stream => packet.fragment.0.value + 1,
    block => packet.fragment.0.value + 2,
  };
}

fn main() -> i64 {
  let packet = TLSCiphertext {
    security: SecurityParameters { cipher_type: block },
    fragment: block => BlockPayload { value: 40 },
  };
  return score(packet);
}
