tests/cases/structs/errors/union-by-nested-constructor-dynamic-selector.ari
enum CipherType {
  stream,
  block,
}

struct SecurityParameters {
  cipher_type: CipherType,
}

struct StreamPayload {
  value: i64,
}

struct BlockPayload {
  value: i64,
}

struct TLSCiphertext {
  security: SecurityParameters,
  fragment: union by security.cipher_type {
    stream => StreamPayload,
    block => BlockPayload,
  },
}

fn choose_cipher_type() -> CipherType {
  return stream;
}

fn main() -> i64 {
  let packet = TLSCiphertext {
    security: SecurityParameters { cipher_type: choose_cipher_type() },
    fragment: stream(StreamPayload { value: 41 }),
  };
  return 0;
}
